# machinelearning-fraud-detection

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  streamlit_app.py
configs/: app.yaml  infer.yaml  train.yaml
data/: sample.csv
docs/: DATA_CARD.md  MODEL_CARD.md
scripts/: download_data.py  run_all.sh
src/: __init__.py
src/fraud_detection/: __init__.py  data.py  features.py  model.py  predict.py  utils.py
tests/: test_cli_predict.py  test_features.py  test_model_smoke.py  test_schema.py
